Fix media queries to display well on smaller screen sizes

--- a/public/css/indexStyles.css
+++ b/public/css/indexStyles.css
@@ -16,7 +16,6 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
-    overflow: hidden;
 }
 header{
     display: flex;
@@ -168,27 +167,6 @@ span{
 }
 
 
-/* @media screen and (max-width: 1100px) {
-    header {
-        padding-top: 24px;
-    }
-    h2{
-        padding-top: 2px;
-    }
-    img {
-        min-height: 80vh;
-        padding-left: 3em;
-    }
-    .hook h3{
-        font-size: 5rem;
-    }
-    
-    .hook p{
-        font-size: 2rem;
-    }
-} */
-  
-
 @media screen and (max-width: 992px) {
     header {
         padding-top: 20px;
@@ -217,7 +195,7 @@ span{
         padding-top: 2px;
     }
     img {
-        min-height: 80vh;
+        height: 80vh;
         padding-left: 3em;
     }
     .hook h3{
@@ -236,16 +214,34 @@ span{
     h2{
         padding-top: 2px;
     }
-    img {
-        min-height: 80vh;
-        padding-left: 3em;
+    img{
+        height: 80%;
+        width: 100%;
+        padding-right: 3em;
+        object-fit: contain;
+    }
+    .image{
+        display: flex;
+        flex: 0 1 30%;
+        min-width: 0;
+        height: 30vh;
     }
     .hook h3{
         font-size: 2rem;
     }
     
     .hook p{
-        font-size: 1.5rem;
+        font-size: 1rem;
+    }
+    .content{
+        flex-direction: column-reverse;
+
+    }
+    .hook{
+        width: 100%;
+        min-height: 100%;
+        padding: 0 3em;
+        flex: 0 0 40%;
     }
 }
 
@@ -257,7 +253,8 @@ span{
         padding-top: 2px;
     }
     img {
-        min-height: 80vh;
+        width: 100%;
+        height: 100vh;
         padding-left: 3em;
     }
     .hook h3{
@@ -265,6 +262,6 @@ span{
     }
     
     .hook p{
-        font-size: 1.2rem;
+        font-size: .5rem;
     }
 }
